@@ -372,7 +372,7 @@ bool LoadSolarSystemObjects(istream& in, Universe& universe)
         }
         Hash* objectData = objectDataValue->getHash();
 
-        DPRINTF("Reading planet %s\n", name.c_str());
+        DVPRINTF("Reading planet %s %s\n", parentName.c_str(), name.c_str());
 
         Selection parent = universe.findPath(parentName, NULL, 0);
         PlanetarySystem* parentSystem = NULL;
@@ -387,6 +387,11 @@ bool LoadSolarSystemObjects(istream& in, Universe& universe)
                 solarSystem = universe.createSolarSystem(parent.star);
             }
             parentSystem = solarSystem->getPlanets();
+#ifdef DEBUG
+            if(parentSystem->find(name))
+                DPRINTF("Warning, duplicate initialization of %s %s!\n",
+                        parentName.c_str(), name.c_str());
+#endif // DEBUG
         }
         else if (parent.body != NULL)
         {
@@ -399,6 +404,14 @@ bool LoadSolarSystemObjects(istream& in, Universe& universe)
                 parentSystem = new PlanetarySystem(parent.body);
                 parent.body->setSatellites(parentSystem);
             }
+#ifdef DEBUG
+            else
+            {
+                if(parentSystem->find(name))
+                    DPRINTF("Warning, duplicate initialization of %s %s!\n",
+                            parentName.c_str(), name.c_str());
+            }
+#endif // DEBUG
             orbitsPlanet = true;
         }
         else
